objects/Site_Workbook__c.object
<CustomObject>
    <description>Junction object to allow associating a Workbook with a Project and Site.</description>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration_ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Discovery Site Workbooks</relationshipLabel>
        <relationshipName>Site_Workbooks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Site_Workbooks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubProject__c</fullName>
        <label>SubProject</label>
        <referenceTo>SubProject__c</referenceTo>
        <relationshipLabel>Discovery Site Workbooks</relationshipLabel>
        <relationshipName>Discovery_Site_Workbooks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Discovery Site Workbook</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Site__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SW-{00000000}</displayFormat>
        <label>Site Workbook ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discovery Site Workbooks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>